# DoubleCherryEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
include/: libretro.h
include/DoubleCherryEngine/: DoubleCherryEngine.h  DoubleCherryEngine.hpp
include/DoubleCherryEngine/AVInfoManager/: AVInfoManager.hpp
include/DoubleCherryEngine/Audio/Core/: IAudioMixer.hpp
include/DoubleCherryEngine/Audio/DSP/: DSPManager.hpp
include/DoubleCherryEngine/Audio/GB/: GBSoundChannel.hpp  GBSoundMixer.hpp
include/DoubleCherryEngine/CameraManager/: CameraManager.hpp
include/DoubleCherryEngine/ColorCorrection/: ColorCorrectionManager.hpp  IColorCorrectionStrategy.hpp  NoopColorCorrectionStrategy.hpp
include/DoubleCherryEngine/CoreConfigurator/: CoreConfigurator.hpp
include/DoubleCherryEngine/CoreEventManager/: CoreEventManager.hpp  IEventListener.hpp
include/DoubleCherryEngine/CoreManager/: CoreManager.hpp  ICore.hpp
include/DoubleCherryEngine/CoreOptionsManager/: CoreOptionsManager.hpp  ICoreOptionProvider.hpp  ICoreOptionsManager.hpp  dcgb_Options_v2.hpp
include/DoubleCherryEngine/EngineCoreManager/: EngineCoreManager.hpp  ICore.hpp
include/DoubleCherryEngine/EngineEventManager/: EngineEventManager.hpp  IEventListener.hpp
include/DoubleCherryEngine/EnviromentManager/: EnviromentManager.hpp
include/DoubleCherryEngine/InputManager/: InputManager.hpp
include/DoubleCherryEngine/NetpacketManager/: NetpacketManager.hpp
include/DoubleCherryEngine/PollingManager/: PollingManager.hpp
include/DoubleCherryEngine/Util/: PixelUtil.h  StringUtil.h
include/DoubleCherryEngine/common/interfaces/: IObserver.hpp  (+2 more)
include/DoubleCherryEngine/libretro/: libretroVariables.h
src/: libretro.cpp
(+23 files in other folders)
